# OpenloaderPDF2zh

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  agent-6.md  agent.md  app.py  compose.yaml  docker-compose.yml  nixpacks.toml  pyproject.toml  railpack.json  railway.json  requirements.txt
.github/workflows/: docker-smoke.yml
apps/web/workbench/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/workbench/src/: App.tsx  dom-compat.d.ts  styles.css  types.ts
apps/web/workbench/src/components/: ArtifactList.tsx  EmptyStateTiles.tsx  JobSettingsPanel.tsx  PdfCanvasPreview.tsx  PdfPreviewPane.tsx  PreviewTabs.tsx  RunStatusStrip.tsx  UploadPanel.tsx  WorkbenchShell.tsx
apps/web/workbench/src/lib/: api.ts
deploy/: oracle-always-free-a1.cloud-init.yaml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/railway/: build.sh  nixpacks.toml  railpack.json  railway.json
docs/design/: README.md
docs/media/readme-video/: index.html  meta.json
docs/media/readme-video/remotion/: package-lock.json
docs/readme-video/: index.html
docs/readme-video/remotion/src/: Composition.tsx  Root.tsx
docs/superpowers/plans/: 2026-04-24-pip-cli-distribution.md
models/quickmt-ko-en/: config.json  src.spm.model
resources/models/quickmt/quickmt-en-ko/: source_vocabulary.json  src.spm.model  target_vocabulary.json
scripts/: materialize_quickmt_models.py  railway-build.sh
src/openpdf2zh/: __main__.py  cli.py  config.py  model_assets.py  models.py  pipeline.py  ui.py  webapp.py
src/openpdf2zh/providers/: base.py  ctranslate2.py  errors.py  groq.py  libretranslate.py  openrouter.py
src/openpdf2zh/services/: layout_planner.py  parser_service.py  render_service.py  translation_service.py  usage_quota.py
src/openpdf2zh/utils/: files.py  geometry.py  job_limiter.py
tests/: test_cli.py  test_config.py  test_config_layout_engine.py  test_ctranslate2.py  test_ctranslate2_provider.py  test_groq.py  test_job_limiter.py  test_layout_planner.py  test_libretranslate.py  test_models.py  test_openrouter.py  test_openrouter_integration.py  test_parser_service.py  test_readme.py  test_render_service.py  test_render_service_pretext.py  test_translation_service.py  test_ui.py  test_usage_quota.py  test_utils_files.py  test_webapp.py
tools/layout/pretext-helper/: measure.mjs  package.json
tools/models/: materialize_quickmt_models.py
tools/pretext_layout_helper/: measure.mjs  measure_with_browser.py
(+2 files in other folders)
