[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpdf2zh-gradio"
version = "0.1.0"
description = "Python-only Gradio skeleton for PDF translation with OpenDataLoader-PDF"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ctranslate2>=4,<5",
  "gradio>=6.10,<7",
  "opendataloader-pdf>=2.1.1,<3",
  "openai>=1.0.0",
  "PyMuPDF>=1.27.2,<2",
  "python-dotenv>=1.0.0",
  "sentencepiece>=0.2,<1",
  "transformers>=4.46,<4.57",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
