[build-system]
requires = ["setuptools>=78.1.1,<80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpdf2zh-gradio"
version = "0.1.0"
description = "Python-only Gradio skeleton for PDF translation with OpenDataLoader-PDF"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ctranslate2>=4.7.1,<5",
  "gradio>=6.10,<7",
  "huggingface_hub>=0.36,<1",
  "opendataloader-pdf>=2.1.1,<3",
  "PyMuPDF>=1.27.2,<2",
  "python-dotenv>=1.0.0",
  "sentencepiece>=0.2,<1",
  "transformers>=4.46,<4.57",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.3,<9",
  "ruff>=0.5.0",
  "setuptools>=78.1.1,<80",
]

[project.scripts]
openpdf2zh = "openpdf2zh.cli:main"
openpdf2zh-gradio = "openpdf2zh.cli:serve_main"
openpdf2zh-translate = "openpdf2zh.cli:translate_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
openpdf2zh = ["assets/buy-me-a-coffee.svg"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
